--- a/AppServicePerf/AppServicePerf/Pages/Images/Create.cshtml
+++ b/AppServicePerf/AppServicePerf/Pages/Images/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Image.Name" class="control-label"></label>
@@ -19,9 +19,7 @@
                 <span asp-validation-for="Image.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Image.Uri" class="control-label"></label>
-                <input asp-for="Image.Uri" class="form-control" />
-                <span asp-validation-for="Image.Uri" class="text-danger"></span>
+                <input name="file" type="file" class="form-control-file" accept="image/*" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
