--- a/AppServicePerf/AppServicePerf/Pages/Images/Details.cshtml
+++ b/AppServicePerf/AppServicePerf/Pages/Images/Details.cshtml
@@ -23,6 +23,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Image.Uri)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Image.FileName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Image.FileName)
+        </dd>
     </dl>
 </div>
 <div>
