--- a/AppServicePerf/AppServicePerf/Pages/Images/Index.cshtml
+++ b/AppServicePerf/AppServicePerf/Pages/Images/Index.cshtml
@@ -14,19 +14,19 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Image[0].Name)
+                @Html.DisplayNameFor(model => model.Images[0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Image[0].Uri)
+                @Html.DisplayNameFor(model => model.Images[0].Uri)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Image[0].FileName)
+                @Html.DisplayNameFor(model => model.Images[0].FileName)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Image) {
+@foreach (var item in Model.Images) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
