--- a/AppServicePerf/AppServicePerf/Pages/Images/Edit.cshtml
+++ b/AppServicePerf/AppServicePerf/Pages/Images/Edit.cshtml
@@ -11,9 +11,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Image.ID" />
+            <input type="hidden" asp-for="Image.Hash" />
             <div class="form-group">
                 <label asp-for="Image.Name" class="control-label"></label>
                 <input asp-for="Image.Name" class="form-control" />
@@ -23,6 +24,16 @@
                 <label asp-for="Image.Uri" class="control-label"></label>
                 <input asp-for="Image.Uri" class="form-control" />
                 <span asp-validation-for="Image.Uri" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Image.FileName" class="control-label"></label>
+                <input asp-for="Image.FileName" readonly="@(true)" class="form-control" />
+            </div>
+            <div class="form-group">
+                <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(@Model.Image.File))" width="100" height="100" />
+            </div>
+            <div class="form-group">
+                <input name="file" type="file" class="form-control-file" accept="image/*" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
